--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,2 +1,10 @@
-<app-divider></app-divider>
+<app-divider [title]="'PlaceHolder'"></app-divider>
 <app-place-holder [header]="true" [lines]="4"></app-place-holder>
+<app-divider [title]="'Segment'"></app-divider>
+<app-segment>
+    <header>
+        <i class="pdf file outline icon"></i>
+        No documents added.
+    </header>
+    <div class="ui yellow button">Add Document</div>
+</app-segment>
