add items in collection component

--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,6 +1,6 @@
-<app-divider [title]="'PlaceHolder'"></app-divider>
+<app-divider>PlaceHolder</app-divider>
 <app-place-holder [header]="true" [lines]="4"></app-place-holder>
-<app-divider [title]="'Segment'"></app-divider>
+<app-divider>Segment</app-divider>
 <app-segment>
     <header>
         <i class="pdf file outline icon"></i>
