--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <div class="ui pointing menu">
         <a class="item" routerLink="/collections" routerLinkActive="active">collections</a>
         <a class="item " routerLink="/elements" routerLinkActive="active">elements</a>
+        <a class="item " routerLink="/views" routerLinkActive="active">views</a>
         <div class="right menu">
             <div class="item">
                 <div class="ui transparent icon input">
