add item list component

--- a/src/app/views/views-home/views-home.component.html
+++ b/src/app/views/views-home/views-home.component.html
@@ -2,3 +2,7 @@
     Statistics
 </app-divider>
 <app-statistics [data]="data"></app-statistics>
+<app-divider>
+    Items
+</app-divider>
+<app-item-list [items]="items"></app-item-list>
