--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
         <a class="item" routerLink="/collections" routerLinkActive="active">collections</a>
         <a class="item " routerLink="/elements" routerLinkActive="active">elements</a>
         <a class="item " routerLink="/views" routerLinkActive="active">views</a>
+        <a class="item " routerLink="/mods" routerLinkActive="active">Modules</a>
         <div class="right menu">
             <div class="item">
                 <div class="ui transparent icon input">
